// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Parallax /> initialises can render a picture element 1`] = `
<div
  className="parallax-container"
>
  <div
    className="parallax"
  >
    <picture>
      <source
        srcSet="#"
        type="image/webp"
      />
      <source
        srcSet="#"
        type="image/jpg"
      />
      <img
        alt=""
        src="#"
      />
    </picture>
  </div>
</div>
`;

exports[`<Parallax /> initialises can render children element 1`] = `
<div
  className="parallax-container"
  imageSrc="image.jpg"
>
  <h1>
    Test
  </h1>
  <div
    className="parallax"
  />
</div>
`;

exports[`<Parallax /> should render a Parallax 1`] = `
<div
  className="parallax-container"
>
  <div
    className="parallax"
  />
</div>
`;
